--- a/WebContent/Diseno/Estilos/home.css
+++ b/WebContent/Diseno/Estilos/home.css
@@ -1,4 +1,4 @@
-#subt1{margin-left: 50px; margin-top: 100px; text-align: left; font-size: 30px;}
+#subt1{margin-left: 50px; margin-top: 50px; text-align: left; font-size: 30px;}
 #texto1{ 
 	text-align: justify; 
 	font-size: 20px;
@@ -8,18 +8,19 @@
 	margin-bottom: 50px;
 }
 
-#subt2{margin-right: 130px; margin-top: 100px; text-align: right; font-size: 30px;}
-#texto2{ 
+#subt3{margin-right: 130px; padding-top: 50px; margin-top: 100px; text-align: right; font-size: 30px; color: white;}
+#texto3{ 
 	text-align: justify;
 	font-size: 20px;
 	margin-right: 130px;
 	margin-left: 400px; 
 	margin-top: 50px;
 	margin-bottom: 50px; 
+	color: white;
 }
 
-#subt3{margin-left: 50px; margin-top: 100px; text-align: left; font-size: 30px;}
-#texto3{ 
+#subt2{margin-left: 50px; margin-top: 100px; text-align: left; font-size: 30px;}
+#texto2{ 
 	text-align: justify; 
 	font-size: 20px;
 	margin-right: 400px;
@@ -32,11 +33,12 @@
 	margin-left: 1200px;
 	margin-top: -200px; 
 }
-#avatar2{
+#avatar3{
 	margin-left: 60px; 
 	margin-top: -250px;
 }
-#avatar3{
+#avatar2{
 	margin-left: 1200px;
 	margin-top: -200px; 
+	padding-bottom: 50px;
 }
