--- a/WebContent/Diseno/Estilos/home.css
+++ b/WebContent/Diseno/Estilos/home.css
@@ -42,3 +42,16 @@
 	margin-top: -200px; 
 	padding-bottom: 50px;
 }
+
+#buscadorCabecera{
+	margin-left: -150px;
+	margin-top: 30px;	
+	margin-right: 1px;
+}
+#buscadorCabecera1{
+	margin-left: 100px;
+	margin-top: 30px;
+}
+
+
+
